syntax = "proto3";

package products;

service ProductService {
  rpc CreateProduct (Product) returns (Product);
  rpc GetProduct (ProductRequestId) returns (Product);
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc UpdateProduct (Product) returns (Product);
  rpc DeleteProduct (ProductRequestId) returns (Empty);
  rpc MarkAsPurchased (ProductRequestId) returns (Product);
}

message Product {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  bool purchased = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ProductList {
  repeated Product products = 1;
}

message ProductRequestId {
  string id = 1;
}

message Empty {}